// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github api should success create the label 1`] = `
Object {
  "closed_issues_count": 0,
  "color": "#fff",
  "default": false,
  "description": "description",
  "id": 1,
  "name": "name",
  "open_issues_count": 0,
  "priority": 10,
  "subscribed": false,
  "url": "https://gitlab.com/api/v4/projects/itgalaxy%2Flabelify/labels/name",
}
`;

exports[`github api should success create the label without description 1`] = `
Object {
  "closed_issues_count": 0,
  "color": "#fff",
  "default": false,
  "description": null,
  "id": 1,
  "name": "name",
  "open_issues_count": 0,
  "priority": 10,
  "subscribed": false,
  "url": "https://gitlab.com/api/v4/projects/itgalaxy%2Flabelify/labels/name",
}
`;

exports[`github api should success create the label without priority 1`] = `
Object {
  "closed_issues_count": 0,
  "color": "#fff",
  "default": false,
  "description": "description",
  "id": 1,
  "name": "name",
  "open_issues_count": 0,
  "priority": null,
  "subscribed": false,
  "url": "https://gitlab.com/api/v4/projects/itgalaxy%2Flabelify/labels/name",
}
`;

exports[`github api should success get labels 1`] = `
Array [
  Object {
    "closed_issues_count": 0,
    "color": "#fff",
    "default": false,
    "description": "description",
    "id": 1,
    "name": "name",
    "open_issues_count": 0,
    "open_merge_requests_count": 0,
    "priority": null,
    "subscribed": false,
    "url": "https://gitlab.com/api/v4/projects/itgalaxy%2Flabelify/labels/name",
  },
  Object {
    "closed_issues_count": 0,
    "color": "#fff",
    "default": false,
    "description": "other description",
    "id": 2,
    "name": "other-name",
    "open_issues_count": 0,
    "open_merge_requests_count": 0,
    "priority": null,
    "subscribed": false,
    "url": "https://gitlab.com/api/v4/projects/itgalaxy%2Flabelify/labels/other-name",
  },
]
`;

exports[`github api should success remove the label 1`] = `""`;

exports[`github api should success update the label 1`] = `
Object {
  "closed_issues_count": 0,
  "color": "#000",
  "default": false,
  "description": "other-description",
  "id": 1,
  "name": "name",
  "open_issues_count": 0,
  "open_merge_requests_count": 0,
  "priority": 10,
  "subscribed": false,
  "url": "https://gitlab.com/api/v4/projects/itgalaxy%2Flabelify/labels/name",
}
`;

exports[`github api should success update the label without description 1`] = `
Object {
  "closed_issues_count": 0,
  "color": "#000",
  "default": false,
  "description": null,
  "id": 1,
  "name": "name",
  "open_issues_count": 0,
  "open_merge_requests_count": 0,
  "priority": 10,
  "subscribed": false,
  "url": "https://gitlab.com/api/v4/projects/itgalaxy%2Flabelify/labels/name",
}
`;

exports[`github api should success update the label without priority 1`] = `
Object {
  "closed_issues_count": 0,
  "color": "#000",
  "default": false,
  "description": "description",
  "id": 1,
  "name": "name",
  "open_issues_count": 0,
  "open_merge_requests_count": 0,
  "priority": null,
  "subscribed": false,
  "url": "https://gitlab.com/api/v4/projects/itgalaxy%2Flabelify/labels/name",
}
`;
